5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1753_1530.log
== TEST (2019-05-16 19:08:12) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc=p2/100
anos=0
while(2*qntd1>qntd2):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
	print(anos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    qntd2=qntd2+qntd2*tc2
NameError: name 'tc2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:41) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc2=p2/100
anos=0
while(2*qntd1>qntd2):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
	print(anos)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:09:04) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc2=p2/100
anos=0
while(2*qntd1>qntd2):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
print(anos)

-- OUTPUT:
112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:09:31) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc2=p2/100
anos=0
while(qntd1>qntd2):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
print(anos)

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:10:31) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc2=p2/100
anos=0
while(0>=80000):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
print(anos)

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:10:54) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc2=p2/100
anos=0
while(0==80000):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
print(anos)

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:28) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc2=p2/100
anos=0
while(2*qntd1>qntd2):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
print(anos)

-- OUTPUT:
112
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:56) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc2=p2/100
anos=0
while(qntd1>qntd2):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
print(anos)

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:39) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc2=p2/100
anos=0
pp1=qntd1
pp2=qntd2
while(pp2>pp1):
	c1=pp1*tc1
	c2=pp2*tc2
	pp1=pp1+c1
	pp2=pp2+c2
	anos=anos+1
print(anos)

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:41:45) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
tc1=p1/100
tc2=p2/100
anos=0
while(qntd1>qntd2):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
print(anos)

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:49:35) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
iten=qntd1+qntd2
tc1=p1/100
tc2=p2/100
anos=0
while(iten>=80000):
	qntd1=qntd1+qntd1*tc1
	qntd2=qntd2+qntd2*tc2
	anos=anos+1
print(anos)

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:53:25) 
-- CODE:
qntd1=int(input("quantidade inicial de pergaminhos: "))
qntd2=int(input("quantidade de varinhas guardadas: "))
p1=float(input("percentual de crescimento dos pergaminhos: "))
p2=float(input("percentual de crescimento das varinhas:"))
iten=qntd1+qntd2
tc1=p1/100
tc2=p2/100
tc3=tc1+tc2
anos=0
while(0<iten>=80000):
	iten=iten+tc3
	anos=anos+1
print(anos)

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
